--- a/schema/nginx.conf
+++ b/schema/nginx.conf
@@ -1,6 +1,7 @@
 user www-data;
 worker_processes  1;
 
+#error_log  /var/log/nginx/error.log debug;
 error_log  /var/log/nginx/error.log;
 #master_process off;
 #daemon off;
