--- a/py/config/widgets.ini
+++ b/py/config/widgets.ini
@@ -1,8 +1,13 @@
 [友情链接]
+开源中国 = http://www.oschina.net
 V2EX 创意工作者社区 = http://www.v2ex.com/?r=zsz
+python4cn = http://simple-is-better.com/
 Everybody loves Rui = http://www.rui-yang.com
 
 [国外优秀vps推荐(本人在用)]
 linode 最好(本站用) = https://www.linode.com/?r=54f6d21e62c7f28225452ca22145a2101ec5e023
 prometeus 低价 = http://www.prometeus.net/billing/aff.php?aff=122
 ramnode 低价 = https://clientarea.ramnode.com/aff.php?aff=1614
+
+[邮件联系方式]
+zsz@hopez.org = 
