--- a/py/config/widgets.ini
+++ b/py/config/widgets.ini
@@ -2,7 +2,7 @@
 开源中国 = http://www.oschina.net
 V2EX 创意工作者社区 = http://www.v2ex.com/?r=zsz
 python4cn = http://simple-is-better.com/
-Everybody loves Rui = http://www.rui-yang.com
+初学者学习社区 = https://www.u3v3.com
 
 [国外优秀vps推荐(本人在用)]
 linode 最好(本站用) = https://www.linode.com/?r=54f6d21e62c7f28225452ca22145a2101ec5e023
